# tests202601

./: LICENSE  README.md  output_lafan1.bvh  output_tpose_test.bvh  output_variant_A.bvh  output_variant_B.bvh  output_variant_C.bvh
Flomo/: .gitignore  AiPlan.md  AiTodo.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  build.bat  configure.bat  download_data.ps1  flomo_config.json  ideas.cpp  setup_dependencies.ps1  setup_dependencies.py  setup_libtorch.py  shell.bat
Flomo/FBX2BVH/: CMakeLists.txt  fbx_converter.cpp  fbx_converter.h  main.cpp
Flomo/cmake/: copy_torch_dlls.cmake
Flomo/saved/2026-02-10_10-05/: flomo_config.json
Flomo/saved/2026-02-10_10-20/: anims.json
Flomo/saved/2026-02-10_11-31/: anims.json
Flomo/saved/2026-02-10_14-48/: flomo_config.json
Flomo/saved/2026-02-10_15-32/: flomo_config.json
Flomo/saved/2026-02-10_20-49/: anims.json  flomo_config.json
Flomo/saved/2026-02-10_21-07/: flomo_config.json
Flomo/saved/2026-02-11_12-52/: anims.json  flomo_config.json
Flomo/saved/2026-02-11_13-26/: anims.json  flomo_config.json
Flomo/scripts/: export_animations.py  export_geno.py
Flomo/shaders/: basic.fs  basic.vs  blur.fs  fxaa.fs  lighting.fs  post.vs  shader.frag  shader.vert  shadow.fs  shadow.vs  skinnedBasic.vs  skinnedForward.fs  skinnedShadow.vs  ssao.fs
Flomo/src/: CMakeLists.txt  anim_database.h  app_config.h  balltree.h  bvh_parser.h  camera.h  capsule_data.h  character_data.h  controlled_character.h  cuda_kernels.cu  definitions.h  fbx_loader.h  flomo.cpp  geno_renderer.h  geometry_utils.h  gui_window_file_dialog.h  ideas.cpp  kmeans_clustering.h  leg_ik.h  math_utils.h  mesh_utils.h  motion_matching.h  networks.h  networksOldExperiments.h  pch.h  profiler.h  retargeter.h  transform_data.h  utils.h
FlomoGMR/: .gitignore  RETARGET_PLAN.md  flomo_claude_notes.md  generate_geno_xml.py  setup.py
FlomoGMR/assets/geno/: geno.xml
FlomoGMR/general_motion_retargeting/: motion_retarget.py  params.py
FlomoGMR/general_motion_retargeting/ik_configs/: bvh_lafan1_to_geno.json  bvh_xsens_to_geno.json  smplx_to_geno.json
FlomoGMR/general_motion_retargeting/utils/: flomo_bvh.py
FlomoGMR/general_motion_retargeting/utils/xsens_vendor/: BVHParser.py
FlomoGMR/scripts/: diag_compare.py  diag_qpos_to_bvh.py  flomo_batch_retarget.py  flomo_to_geno_bvh.py  xsens_to_geno_bvh.py
